Try to fix the translation mess
Signed-off-by: Dario Freddi <drf54321@gmail.com>

--- a/translations/ca/shaman_ca.po
+++ b/translations/ca/shaman_ca.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-04-01 23:59+0200\n"
+"POT-Creation-Date: 2009-08-10 14:59+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -113,9 +113,7 @@ msgid ""
 "configuration to improve your building performance."
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: BuildingHandler#6
 msgctxt "BuildingHandler#6"
@@ -871,9 +869,7 @@ msgstr "S'han satisfet totes les dependències"
 msgid "%n package(s) will be installed as dependencies"
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: MainWindow#1
 msgid "Name"
@@ -1911,17 +1907,13 @@ msgstr "S'està processant la pila. A continuació:<br />"
 msgid "Remove <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: ReviewQueueDialog#10
 msgid "Install/Upgrade <b>%n package(s)</b><br />"
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: ReviewQueueDialog#11
 msgid "Do you wish to continue?"
@@ -1989,9 +1981,7 @@ msgid ""
 "Click here to upgrade your System."
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: ShamanTrayIcon#11
 msgid "New News Available"
@@ -2023,9 +2013,7 @@ msgid ""
 "add it to the current Queue<br> and process it later."
 msgstr ""
 "\n"
-"            \n"
-"            \n"
-"        "
+"            "
 
 #: SysUpgradeDialog#2
 msgctxt "SysUpgradeDialog#2"
@@ -2091,6 +2079,7 @@ msgid "Thanks To"
 msgstr "Gràcies a"
 
 #: aboutDialog#6
+#, fuzzy
 msgid ""
 "<!DOCTYPE HTML PUBLIC \"-//W3C//DTD HTML 4.0//EN\" \"http://www.w3.org/TR/REC-"
 "html40/strict.dtd\">\n"
@@ -2275,6 +2264,8 @@ msgid ""
 "right:0px; -qt-block-indent:0; text-indent:0px; font-weight:600;\"><span "
 "style=\" font-weight:400;\">Macedonian Translator</span></p></body></html>"
 msgstr ""
+"\n"
+"            "
 
 #: aboutDialog#7
 msgid "Visit &Website..."
